objects/ccrz__E_RichContent__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__ContentKey__c</fullName>
        <description>The key used to determine which piece of content will appear on the page</description>
        <externalId>true</externalId>
        <label>ContentKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Content__c</fullName>
        <description>The actual rich content to be displayed on the page.</description>
        <label>Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveEnd__c</fullName>
        <description>The last date that this content will be available</description>
        <label>EffectiveEnd</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveStart__c</fullName>
        <description>The first date time this content will be available.</description>
        <label>EffectiveStart</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <defaultValue>500</defaultValue>
        <description>Sequence number used to determine which content will display for a given content key</description>
        <label>Sequence</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Status__c</fullName>
        <defaultValue>&apos;Draft&apos;</defaultValue>
        <description>Status of the content (published, draft...)</description>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>The storefront that this content is associated with</description>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Rich Content</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CC Rich Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Rich Contents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>